[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
oauth2 = "4.4.2"
tracing = "0.1.41"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
http = "1.2.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
anyhow = "1.0.95"
async-session = "3.0.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "mysql",
    "runtime-async-std-native-tls",
    "chrono",
    "uuid",
] }
